<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simpletouristapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detail_tour"
            app:destination="@id/nav_detail_tour" />
        <action
            android:id="@+id/action_nav_home_to_nav_news_detail"
            app:destination="@id/nav_news_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_domestic"
        android:name="com.example.simpletouristapp.ui.domestic.DomesticFragment"
        android:label="@string/menu_domestic"
        tools:layout="@layout/domestic_fragment">
        <action
            android:id="@+id/action_domestic_to_detailTour"
            app:destination="@id/nav_detail_tour" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_tour"
        android:name="com.example.simpletouristapp.ui.domestic.DetailTourFragment"
        android:label="@string/detail_tour"
        tools:layout="@layout/detail_tour" >
        <action
            android:id="@+id/action_nav_detail_tour_to_nav_domestic"
            app:destination="@id/nav_domestic" />
        <action
            android:id="@+id/action_nav_detail_tour_to_nav_international"
            app:destination="@id/nav_international" />
        <action
            android:id="@+id/action_nav_detail_tour_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_detail_tour_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_international"
        android:name="com.example.simpletouristapp.ui.international.InternationalFragment"
        android:label="@string/menu_international"
        tools:layout="@layout/international_fragment">
        <action
            android:id="@+id/action_international_to_detailTour"
            app:destination="@id/nav_detail_tour" />
    </fragment>
    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.simpletouristapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/news_fragment" >
        <action
            android:id="@+id/action_nav_news_to_nav_news_detail"
            app:destination="@id/nav_news_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_news_detail"
        android:name="com.example.simpletouristapp.ui.news.DetailNewsFragment"
        android:label="@string/detail_news_title"
        tools:layout="@layout/detail_news" >
        <action
            android:id="@+id/action_nav_news_detail_to_nav_news"
            app:destination="@id/nav_news" />
        <action
            android:id="@+id/action_nav_news_detail_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.simpletouristapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_detail_tour"
            app:destination="@id/nav_detail_tour" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.simpletouristapp.ui.login.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/register" >
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.simpletouristapp.ui.contact.ContactFragment"
        android:label="@string/contact_title"
        tools:layout="@layout/fragment_contact" >
    </fragment>

</navigation>